--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs_20", "npm"]
 cmds = [
   "cd .. && npm install",
   "cd .. && npm run build",
-  "npm install"
+  "cd server && npm install"
 ]
 
 [phases.build]
